syntax = "proto2";
package pdpb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;


service PDService {
  rpc GetLeader (LeaderReq) returns (LeaderRsp) {}
  rpc AllocID (AllocIDReq) returns (AllocIDRsp) {}
  rpc IsClusterBootstrap (IsClusterBootstrapReq) returns (IsClusterBootstrapRsp) {}
  rpc BootstrapCluster (BootstrapClusterReq) returns (BootstrapClusterRsp) {}
}

message Leader {
    optional uint64 id   = 1 [(gogoproto.nullable) = false];
    optional string name = 2 [(gogoproto.nullable) = false];
    optional string addr = 3 [(gogoproto.nullable) = false];
}

message LeaderReq {
    optional string from = 1 [(gogoproto.nullable) = false];
    optional uint64 id   = 2 [(gogoproto.nullable) = false];
}

message LeaderRsp {
    optional Leader leader = 1 [(gogoproto.nullable) = false];
}

message AllocIDReq {
    optional string from = 1 [(gogoproto.nullable) = false];
    optional uint64 id   = 2 [(gogoproto.nullable) = false];
}

message AllocIDRsp {
    optional uint64 id = 1 [(gogoproto.nullable) = false];
}

message IsClusterBootstrapReq {
    optional string from = 1 [(gogoproto.nullable) = false];
    optional uint64 id   = 2 [(gogoproto.nullable) = false];
}

message IsClusterBootstrapRsp {
    optional bool value = 1 [(gogoproto.nullable) = false];
}

message BootstrapClusterReq {
    optional string from = 1 [(gogoproto.nullable) = false];
    optional uint64 id   = 2 [(gogoproto.nullable) = false];
}

message BootstrapClusterRsp {
    optional bool alreadyBootstrapped = 1 [(gogoproto.nullable) = false];
}